# st-components

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: iframe-demo.html
benchmarks/: BASELINES.md  bench_render.py
examples/: 01_hello.py  02_state.py  03_callbacks.py  04_composition.py  05_elements.py  05_styles.py  06_elements.py  06_functional.py  07_functional.py  07_refs.py  08_hooks.py  08_refs.py  09_fragments.py  09_hooks.py  10_fragments.py  10_scoped_rerun.py  11_dynamic_rendering.py  11_scoped_rerun.py  12_context.py  12_dynamic_rendering.py  13_context.py  13_flow.py  14_flow.py  14_theming.py  15_theming.py  README.md  _source.py  basic.py  dashboard.py  data_dashboard.py  flow.py  functional.py  functional_typed.py  hooks.py  multipage_app.py  multipage_shared.py  primitives.py  slider_debug.py  theme_editor.py  typed_props.py  (+1 more)
examples/15_multipage/: README.md  app.py  shared.py
examples/16_full_data_app/: README.md  app.py  shared.py
examples/16_multipage/: README.md  app.py  shared.py
examples/17_full_data_app/: README.md  app.py  components.py  shared.py
st_components/: __init__.py  utils.py
tests/: _mock.py  conftest.py  test_access.py  test_apis.py  test_app.py  test_component.py  test_context.py  test_context_managers.py  test_dynamic_rendering.py  test_elements.py  test_errors.py  test_examples_runner.py  test_factory.py  test_functional.py  test_integration.py  test_lifecycle.py  test_local_refs.py  test_store.py  test_stress.py  test_style.py
(+99 files in other folders)
