[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st-components"
version = "0.1.0"
description = "React-style stateful components for Streamlit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "streamlit",
    "modict",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["st_components*"]
