[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st-components"
version = "0.3.0"
description = "React-style stateful components for Streamlit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "streamlit>=1.56.0",
    "modict>=0.4.13",
    "toml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["st_components*", "examples*"]

[tool.setuptools.package-data]
st_components = ["py.typed"]
"examples" = ["assets/*"]
"st_components.elements" = ["*.pyi"]
